[tool.poetry]
name = "todol"
version = "0.1.0"
description = "A todo list from the command line"
authors = ["Bryan Hu <bryan.hu.2020@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
pycomplete = {version = "^0.3.1", optional = true}

[tool.poetry.extras]
complete = ["pycomplete"]

[tool.poetry.scripts]
todol = "todol.__main__:main"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^20.8b1"
mypy = "^0.790"
pylint = "^2.6.0"
bandit = "^1.6.3"
isort = "^5.6.4"
hypothesis = "^5.43.3"
pytest-cov = "^2.10.1"
toml = "^0.10.2"
pytest-random = "^0.02"
invoke = "^1.4.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
